<resources>
    <string name="app_name">Rotenzo cook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--<string name="nav_header_title">Android Studio</string>-->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_e_shop">E-shop</string>
    <string name="change_pw">Change password</string>
    <string name="conf_pw_not_match">Confirm password not match</string>

    <string name="product">Products</string>
    <string name="recipebook">Recipebook</string>
    <string name="checklist">checklist</string>
    <string name="favourite">Favorites</string>
    <string name="menu">Menu</string>
    <string name="username">Username</string>
    <string name="email">E-mail address</string>
    <string name="phone_nmbr">Phone number</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_new_password">Confirm New Password</string>
    <string name="sign_up">Sign up</string>
    <string name="are_u_logout">Would You Register Now?</string>
    <string name="register">Register</string>
    <string name="later">Later</string>
    <string name="new_recipe">New Recipe</string>
    <string name="no_video">No video found</string>
    <string name="portion">Portion</string>
    <string name="last_recipe">Recently viewed</string>
    <string name="add_shoping">Add to Shopping List</string>

    <string name="search_Here">Search Here</string>
    <string name="select_a_device">Select a device</string>
    <string name="chang_lang">Change the Language</string>
    <string name="contact_us">Contact us</string>
    <string name="share_exp">Share Your Exeprience</string>
    <string name="sign_rotenzo">Signout from Rotenzo cook</string>
    <string name="email_">Email</string>
    <string name="login">Login</string>
    <string name="register_link">Register link</string>
    <string name="forget_pw">Forgot password?</string>
    <string name="lets_start">Lets get started</string>
    <string name="create_r_ac">Create Rotenzo cook account</string>
    <string name="or_login">or login with</string>
    <string name="privacy_note">Privacy policy</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="type_time">Type in time</string>
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="shopping">Shopping</string>
    <string name="shopping_list">Shopping list</string>
    <string name="tips">Tips</string>
    <string name="submit">Submit</string>
    <string name="share_frnds">Share with friends!</string>
    <string name="setup_ac">Setup your account or log in to get the most from your connected product</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_rcord_found">No Record Found</string>
    <string name="total_min">Total min</string>
    <string name="away_min">Away min</string>
    <string name="calories_min">Calories kcl</string>
    <string name="protien_min">Protien g</string>
    <string name="all_ingredients_are_purchased">Add all necessary products to your shopping list</string>
    <string name="time_selected">Time Select</string>
    <string name="add_all_ingredients_purchased">All Ingredients are purchased!</string>

    <string name="facebook_app_id">970692009956404</string>
    <string name="fb_login_protocol_scheme">fb970692009956404</string>

    <!--//****************************new-->
    <string name="enter_first">Please enter username</string>
    <string name="enter_pw">Please enter password</string>
    <string name="invalid_email_pw">invalide email or password </string>
    <string name="enter_email">Please enter email</string>
    <string name="valid_email">Please enter a valid email</string>
    <string name="fail">fail</string>
    <string name="success">Successful</string>
    <string name="sign_cancel">Sign in cancel</string>
    <string name="try_again">Please try again</string>
    <string name="select_ingre">select any ingredient first</string>
    <string name="process">Process</string>
    <string name="ingre">Ingredients</string>
    <string name="set_alarm">Your Alarm  Succesfully set for: </string>
    <string name="add_fav">Add to favourite</string>
    <string name="remove_fav">Remove from favourite</string>
    <string name="next">Next</string>
    <string name="t_and_c">Our Terms &amp; conditions</string>
    <string name="choose_language">Please choose language</string>
    <string name="write_review">Write a review</string>
    <string name="rate_app">Rate this app</string>
    <string name="tell_what">Tell us what you think</string>
    <string name="feedback_imp">Your feedback is important,\n Write a review or rate this app</string>
    <string name="support_us">Support us</string>
    <string name="support_query">If any queries, please contact us</string>
    <string name="write_email">Write an email:- support@rotenzocook.com</string>
    <string name="or">or</string>
    <string name="call_nmbr">call us:- +976 9876543210</string>
    <string name="logout_app">Are you sure, you want to logout this app</string>
    <string name="filter">Filter</string>
    <string name="check_internet">Please check internet</string>
    <string name="max_energy">Max energy value</string>
    <string name="max_cooking">Max cooking time</string>
    <string name="sort_recipe">Sort recipes:</string>
    <string name="by_name">By name</string>
    <string name="by_time">By Cooking time</string>
    <string name="by_calore_value">By calorific value</string>
    <string name="add_ingred">Add ingredient</string>
    <string name="model1">Model</string>
    <string name="shape1">Shape</string>
    <string name="type1">Type</string>
    <string name="capacity1">Capacity</string>
    <string name="timer">Timer</string>
    <string name="total_rec_found">Total recipes found</string>
    <string name="total_found">Total found</string>
    <string name="back_again">Double click to exit</string>
    <string name="back_press">Are you sure you want to exit?</string>
    <string name="shoping_list_empty">The shopping list is empty.</string>
    <string name="favorite_list_empty">The favourite list is empty.</string>
    <string name="recipy_list_empty">The recipe list is empty.</string>


    <!--getResources().getString(R.string.no_rcord_found)-->

    <string-array name="language">
        <item>-select language-</item>
        <item>монгол(mn)</item>
        <item>English(en)</item>

    </string-array>


</resources>
