<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_image2"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_margin="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensedregular"
            android:text="@string/support_query"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/blackColor"
            />
        <TextView
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotocondensedregular"
            android:text="@string/write_email"
            android:textSize="16dp"
            android:textStyle="normal"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16dp"
            android:fontFamily="@font/robotocondensedregular"
            android:textAlignment="center"
            android:textStyle="normal"
            />

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_nmbr"
            android:textSize="16dp"
            android:fontFamily="@font/robotocondensedregular"
            android:textStyle="normal"
            />



    </LinearLayout>

</FrameLayout>