<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/shqre_ex_bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_margin="25dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tell_what"
                android:textSize="18dp"
                android:fontFamily="@font/mogulmagistralbold"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_imp"
                android:textSize="14dp"
                android:fontFamily="@font/robotocondensedregular"
                android:textColor="@color/lightblackcolor"
                android:textStyle="normal"
                />

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:text="@string/write_review"
            android:id="@+id/btn_write_review"
            android:textSize="16dp"
            android:fontFamily="@font/robotocondensedregular"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:background="@drawable/button_corner"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="25dp"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:text="@string/rate_app"
            android:fontFamily="@font/robotocondensedregular"
            android:id="@+id/btn_rate_app"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_bg_rate"
            android:layout_height="wrap_content" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="50dp">

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>