<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="@drawable/background_image2"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            >


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:singleLine="true"
                android:layout_marginLeft="20dp"
                android:gravity="left|center"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:fontFamily="@font/mogulmagistralbold"
                android:layout_alignParentStart="false"/>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/email_"
            android:fontFamily="@font/mogulmagistralbold"
            android:textSize="18dp"
            android:textColor="@color/textblackcolor"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />


        <EditText
            android:paddingLeft="5dp"
            android:fontFamily="@font/robotocondensedregular"
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:background="@drawable/editext_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textSize="18dp"
            android:fontFamily="@font/mogulmagistralbold"
            android:layout_marginTop="20dp"
            android:textColor="@color/textblackcolor"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />


        <EditText
            android:fontFamily="@font/robotocondensedregular"
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:background="@drawable/editext_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />



        <Button
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:fontFamily="@font/robotocondensedregular"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:id="@+id/login"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:background="@drawable/button_corner"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/textblackcolor"
            android:textStyle="bold"
            android:textSize="18dp"
            android:fontFamily="@font/mogulmagistralbold"
            android:layout_margin="30dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_forgot_pw"
        android:layout_width="wrap_content"
        android:text="@string/forget_pw"
        android:textColor="@color/textblackcolor"
        android:textStyle="bold"
        android:textSize="18dp"
        android:fontFamily="@font/mogulmagistralbold"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>




</LinearLayout>
