<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_image2"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingsFragment">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:layout_width="wrap_content"
           android:text="@string/select_a_device"
            android:textStyle="bold"
            android:textSize="18dp"
            android:fontFamily="@font/mogulmagistralbold"
            android:textColor="@color/textblackcolor"
            android:layout_height="wrap_content" />

      <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />




    </LinearLayout>


    <LinearLayout
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

     <View
     android:background="@color/greycolor"

    android:layout_width="match_parent"
    android:layout_height="1dp"/>

    <LinearLayout
        android:weightSum="1"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_weight="0.5"
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/blackColor"
        android:text="@string/chang_lang"
        android:fontFamily="@font/mogulmagistralbold"
        android:layout_height="wrap_content" />

        <Spinner
            android:theme="@style/SpinnerTheme"
            android:id="@+id/spin_lang"
            android:entries="@array/language"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </Spinner>

    </LinearLayout>

    <View
        android:background="@color/greycolor"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/blackColor"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:text="@string/contact_us"
        android:fontFamily="@font/mogulmagistralbold"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/greycolor"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>



    <TextView
        android:id="@+id/tv_share_ex"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/blackColor"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:text="@string/share_exp"
        android:fontFamily="@font/mogulmagistralbold"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/greycolor"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_change_pw"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/blackColor"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:text="@string/change_pw"
            android:fontFamily="@font/mogulmagistralbold"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/greycolor"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>



        <TextView
        android:id="@+id/tv_signout"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/blackColor"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:fontFamily="@font/mogulmagistralbold"
        android:text="@string/sign_rotenzo"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/greycolor"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

        </LinearLayout>


</LinearLayout>

    </LinearLayout>

    </ScrollView>


</FrameLayout>